--- a/Nodes/Items/Items.yaml
+++ b/Nodes/Items/Items.yaml
@@ -72,3 +72,16 @@ Children:
       DataType: Size
       ModellingRule: Optional
       Value: 58.58300018310547
+- Name: New_Label1
+  Type: ObjectLibraryItem
+  Children:
+  - Name: New_Label1
+    Id: g=2d48ba37814341fd164eb4c530ff8a8d
+    Supertype: Label
+    ReferenceType: HasComponent
+    Children:
+    - Name: Text
+      Type: BaseDataVariableType
+      DataType: LocalizedText
+      ModellingRule: Optional
+      Value: {"LocaleId":"en-US","Text":"New Label"}
