--- a/Nodes/Items/Items.yaml
+++ b/Nodes/Items/Items.yaml
@@ -85,3 +85,16 @@ Children:
       DataType: LocalizedText
       ModellingRule: Optional
       Value: {"LocaleId":"en-US","Text":"New Label"}
+- Name: New_Label_2
+  Type: ObjectLibraryItem
+  Children:
+  - Name: New_Label_2
+    Id: g=4b10b4f3a80f34c4c6e2a7101336ee6e
+    Supertype: Label
+    ReferenceType: HasComponent
+    Children:
+    - Name: Text
+      Type: BaseDataVariableType
+      DataType: LocalizedText
+      ModellingRule: Optional
+      Value: {"LocaleId":"en-US","Text":"New Label 2"}
